tests/errors/duplicate_method.b
S :: struct { x int }

S :: foo(self) {
}

S :: foo(self) {
}

fn main() {
}
